# api_book_storage

./: LICENSE  pyproject.toml
api/: api.py
tests/: test_api_example.py
