[tool.poetry]
name = "api_example"
version = "0.1.0"
description = "Example of API to improve the skilss to APIs"
authors = ["vivianebuge <vivianebuge@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
Flask-WTF = "^1.0.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
